--- a/HR_Project/HR_Project.Domain/HR_Project.Domain.csproj
+++ b/HR_Project/HR_Project.Domain/HR_Project.Domain.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\Concrete\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.25" />
+  </ItemGroup>
+
 </Project>
