--- a/HR_Project/HR_Project.Infrastructure/HR_Project.Infrastructure.csproj
+++ b/HR_Project/HR_Project.Infrastructure/HR_Project.Infrastructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.25" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HR_Project.Domain\HR_Project.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
