--- a/HR_Project/HR_Project.Domain/HR_Project.Domain.csproj
+++ b/HR_Project/HR_Project.Domain/HR_Project.Domain.csproj
@@ -7,11 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\Concrete\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.25" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.25" />
   </ItemGroup>
 
 </Project>
