--- a/HR_Project/HR_Project.Presentation/HR_Project.Presentation.csproj
+++ b/HR_Project/HR_Project.Presentation/HR_Project.Presentation.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HR_Project.Application\HR_Project.Application.csproj" />
+  </ItemGroup>
+
 </Project>
