--- a/HR_Project/HR_Project.Application/HR_Project.Application.csproj
+++ b/HR_Project/HR_Project.Application/HR_Project.Application.csproj
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HR_Project.Infrastructure\HR_Project.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
