--- a/HR_Project/HR_Project.Application/HR_Project.Application.csproj
+++ b/HR_Project/HR_Project.Application/HR_Project.Application.csproj
@@ -8,6 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.25" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.25" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HR_Project.Common\HR_Project.Common.csproj" />
+    <ProjectReference Include="..\HR_Project.Domain\HR_Project.Domain.csproj" />
+    <ProjectReference Include="..\HR_Project.Infrastructure\HR_Project.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
