--- a/HR_Project/HR_Project.Common/HR_Project.Common.csproj
+++ b/HR_Project/HR_Project.Common/HR_Project.Common.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\DTOs\" />
+    <Folder Include="Models\VMs\" />
+  </ItemGroup>
+
 </Project>
