--- a/HR_Project/HR_Project.API/appsettings.json
+++ b/HR_Project/HR_Project.API/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "JwtSettings": {
+        "secretKey": "bilgeadam2023NETAkademiUzmanYazilimEgitimiWebApiEgitimi", 
+        "validIssuer": "bilgeadamapi", // server 
+        "validAudience": "http://localhost:7008", // Todo düzenlenecek 
+        "validSubject": "JWTServiceAccessToken" // token
+        //"expires": 60
     }
-  },
-  "AllowedHosts": "*"
 }
