--- a/HR_Project/HR_Project.Common/HR_Project.Common.csproj
+++ b/HR_Project/HR_Project.Common/HR_Project.Common.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\DTOs\" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.25">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -16,10 +16,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HR_Project.Domain\HR_Project.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\VMs\" />
   </ItemGroup>
 
 </Project>
