Absence DTO ve VM oluşturuldu. Servisi yazıldı. AbsenceAPI ve controller yapıldı

--- a/HR_Project/HR_Project.Application/HR_Project.Application.csproj
+++ b/HR_Project/HR_Project.Application/HR_Project.Application.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HR_Project.Common\HR_Project.Common.csproj" />
     <ProjectReference Include="..\HR_Project.Infrastructure\HR_Project.Infrastructure.csproj" />
   </ItemGroup>
 
