--- a/HR_Project/HR_Project.Presentation/HR_Project.Presentation.csproj
+++ b/HR_Project/HR_Project.Presentation/HR_Project.Presentation.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HR_Project.Application\HR_Project.Application.csproj" />
+    <ProjectReference Include="..\HR_Project.Common\HR_Project.Common.csproj" />
   </ItemGroup>
 
 </Project>
