--- a/HR_Project/HR_Project.API/appsettings.json
+++ b/HR_Project/HR_Project.API/appsettings.json
@@ -5,9 +5,12 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=Unknown\\SQLESER;Database=HS12-HR-Project;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
     "AllowedHosts": "*",
     "JwtSettings": {
-        "secretKey": "bilgeadam2023NETAkademiUzmanYazilimEgitimiWebApiEgitimi", 
+        "secretKey": "bilgeadam2023NETAkademiUzmanYazilimEgitimiWebApiEgitimi",
         "validIssuer": "bilgeadamapi", // server 
         "validAudience": "http://localhost:7008", // Todo düzenlenecek 
         "validSubject": "JWTServiceAccessToken" // token
