--- a/.github/workflows/master_easy-hr.yml
+++ b/.github/workflows/master_easy-hr.yml
@@ -21,6 +21,10 @@ jobs:
         with:
           dotnet-version: '6.0.x'
           include-prerelease: true
+          
+      - name: Set working directory to HR_Project.Presentation
+        run: cd HR_Project.Presentation
+
 
       - name: Build with dotnet
         run: dotnet build HR_Project.Presentation.csproj --configuration Release
