--- a/.github/workflows/master_easy-hr.yml
+++ b/.github/workflows/master_easy-hr.yml
@@ -22,21 +22,21 @@ jobs:
           dotnet-version: '6.0.x'
           include-prerelease: true
           
-      - name: Set working directory to HR_Project.Presentation
+      - name: Set working directory to HR_Project/HR_Project.Presentation
         run: cd HR_Project.Presentation
 
 
       - name: Build with dotnet
-        run: dotnet build HR_Project.Presentation.csproj --configuration Release
+        run: dotnet build HR_Project/HR_Project.Presentation.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish HR_Project.Presentation.csproj --configuration Release -o ./publish
+        run: dotnet publish HR_Project/HR_Project.Presentation.csproj --configuration Release -o ./publish
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: .net-app
-          path: ./HR_Project.Presentation/publish
+          path: .HR_Project/HR_Project.Presentation/publish
 
   deploy:
     runs-on: windows-latest
@@ -57,5 +57,5 @@ jobs:
         with:
           app-name: 'easy-hr'
           slot-name: 'Production'
-          package: ./HR_Project.Presentation/publish
+          package: .HR_Project/HR_Project.Presentation/publish
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C7701911EB8B4CBA8B61C7EAAB07C94A }}
