Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_easy-hr.yml
+++ b/.github/workflows/master_easy-hr.yml
@@ -21,24 +21,18 @@ jobs:
         with:
           dotnet-version: '6.0.x'
           include-prerelease: true
-          
-      - name: Set working directory to repository root
-        run: cd ${{ github.workspace }}
-
-      - name: Set working directory to HR_Project.Presentation
-        run: cd HR_Project.Presentation
 
       - name: Build with dotnet
-        run: dotnet build HR_Project.Presentation.csproj --configuration Release
+        run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish HR_Project.Presentation.csproj --configuration Release -o ./publish
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: .net-app
-          path: ./HR_Project.Presentation/publish
+          path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
     runs-on: windows-latest
@@ -59,5 +53,5 @@ jobs:
         with:
           app-name: 'easy-hr'
           slot-name: 'Production'
-          package: ./HR_Project.Presentation/publish
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C7701911EB8B4CBA8B61C7EAAB07C94A }}
+          package: .
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E1ED6CC3EA5C4B70AEC82AA4CC469426 }}
