--- a/.github/workflows/master_easy-hr.yml
+++ b/.github/workflows/master_easy-hr.yml
@@ -23,7 +23,7 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build ./HR_Project/HR_Project.Presentation/HR_Project.Presentation.csproj --configuration Release
 
       - name: dotnet publish
         run: dotnet publish ./HR_Project/HR_Project.Presentation/HR_Project.Presentation.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
