--- a/.github/workflows/master_easy-hr-client.yml
+++ b/.github/workflows/master_easy-hr-client.yml
@@ -23,16 +23,17 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build ./HR_Project/HR_Project.Presentation/HR_Project.Presentation.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish ./HR_Project/HR_Project.Presentation/HR_Project.Presentation.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: .net-app
           path: ${{env.DOTNET_ROOT}}/myapp
+
 
   deploy:
     runs-on: windows-latest
