--- a/HR_Project/HR_Project.Presentation/appsettings.json
+++ b/HR_Project/HR_Project.Presentation/appsettings.json
@@ -1,14 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=tcp:hrprojesunucu.database.windows.net,1433;Initial Catalog=HR_Proje_DB_2;Persist Security Info=False;User ID=hrproje123;Password=HS-12boost;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:hrprojesunucu.database.windows.net,1433;Initial Catalog=HR_Proje_DB_2;Persist Security Info=False;User ID=hrproje123;Password=HS-12boost;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  }
 
 }
 
+//"Server=tcp:hrprojesunucu.database.windows.net,1433;Initial Catalog=HR_Proje_DB_2;Persist Security Info=False;User ID=hrproje123;Password=HS-12boost;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
+//"Server=tcp:eser.database.windows.net,1433;Initial Catalog=eserDB;Persist Security Info=False;User ID=eser;Password=osmaN513;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
