--- a/HR_Project/HR_Project.Presentation/appsettings.json
+++ b/HR_Project/HR_Project.Presentation/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=tcp:hrprojesunucu.database.windows.net,1433;Initial Catalog=HR_Proje_DB_4;Persist Security Info=False;User ID=hrproje123;Password=HS-12boost;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+        "DefaultConnection": "Server=tcp:hrprojesunucu.database.windows.net,1433;Initial Catalog=HR_Proje_DBv8;Persist Security Info=False;User ID=hrproje123;Password=HS-12boost;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     }
 
 }
