--- a/HR_Project/HR_Project.Application/HR_Project.Application.csproj
+++ b/HR_Project/HR_Project.Application/HR_Project.Application.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="MimeKit" Version="4.3.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
