--- a/HR_Project/HR_Project.Presentation/appsettings.json
+++ b/HR_Project/HR_Project.Presentation/appsettings.json
@@ -1,17 +1,18 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=Unknown\\SQLESER;Database=HR-Project;Trusted_Connection=True;"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:hrprojesunucu.database.windows.net,1433;Initial Catalog=HR_Proje_DBv13;Persist Security Info=False;User ID=hrproje123;Password=HS-12boost;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 
 }
 
-//"Server=tcp:hrprojesunucu.database.windows.net,1433;Initial Catalog=HR_Proje_DB_2;Persist Security Info=False;User ID=hrproje123;Password=HS-12boost;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+//Server=Unknown\\SQLESER;Database=HR-Project;Trusted_Connection=True;
+//"Server=tcp:hrprojesunucu.database.windows.net,1433;Initial Catalog=HR_Proje_DB_2;Persist Security Info=False;User ID=hrproje123;Password=HS-12boost;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
 //"Server=tcp:eser.database.windows.net,1433;Initial Catalog=eserDB;Persist Security Info=False;User ID=eser;Password=osmaN513;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
