--- a/HR_Project/HR_Project.Presentation/appsettings.json
+++ b/HR_Project/HR_Project.Presentation/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
 
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=Unknown\\SQLESER;Database=HR-Project;Trusted_Connection=True;"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:hrprojesunucu.database.windows.net,1433;Initial Catalog=HR_Proje_DBv17;Persist Security Info=False;User ID=hrproje123;Password=HS-12boost;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
-    }
+  }
 
 
 }
