--- a/HR_Project/HR_Project.Presentation/appsettings.json
+++ b/HR_Project/HR_Project.Presentation/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
 
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:hrprojesunucu.database.windows.net,1433;Initial Catalog=HR_Proje_DBv17;Persist Security Info=False;User ID=hrproje123;Password=HS-12boost;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=tcp:easyhrv1.database.windows.net,1433;Initial Catalog=easyHR;Persist Security Info=False;User ID=easyhr;Password=hs-12Boost;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
-  }
+    }
 
 
 }
