CI/CD tanımlandı

--- a/HR_Project/HR_Project.Presentation/appsettings.json
+++ b/HR_Project/HR_Project.Presentation/appsettings.json
@@ -7,16 +7,22 @@
   },
   "AllowedHosts": "*",
 
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=tcp:easyhrv1.database.windows.net,1433;Initial Catalog=easyHR;Persist Security Info=False;User ID=easyhr;Password=hs-12Boost;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:hrprojesunucu1.database.windows.net,1433;Initial Catalog=hrprojesunucu1;Persist Security Info=False;User ID=admin123;Password=HS-12Boost;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
-    }
+  }
 
 
 }
 
+
+//Server=tcp:hrprojesunucu1.database.windows.net,1433;Initial Catalog=hrprojesunucu1;Persist Security Info=False;User ID=admin123;Password=HS-12boost;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;
+
+//"Server=tcp:hrprojesunucu.database.windows.net,1433;Initial Catalog=HR_Proje_DB_2;Persist Security Info=False;User ID=hrproje123;Password=HS-12boost;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
+
 //deneme
 //Server=Unknown\\SQLESER;Database=HR-Project;Trusted_Connection=True;
-//"Server=tcp:hrprojesunucu.database.windows.net,1433;Initial Catalog=HR_Proje_DB_2;Persist Security Info=False;User ID=hrproje123;Password=HS-12boost;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
 
 //"Server=tcp:eser.database.windows.net,1433;Initial Catalog=eserDB;Persist Security Info=False;User ID=eser;Password=osmaN513;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
